--- a/src/components/FloatCart/style.scss
+++ b/src/components/FloatCart/style.scss
@@ -255,6 +255,7 @@
       cursor: pointer;
 
       transition: background-color 0.2s;
+      width: 100%;
 
       &:hover {
         background-color: #000;
